[package]
name = "blip-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
chrono = "0.4.19"
md5 = "0.7.0"
reqwest = "0.11.10"
serde = {version = "1.0.136",features = ["derive"]}
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }

[dev-dependencies]
lazy_static = "1.4.0"
