[package]
name = "blip-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
serde = {version = "1.0.136",features = ["derive"]}
serde_json = "1.0.79"
thiserror = "1.0.30"
regex = "1.5.5"
nom = "7.1.1"

[dev-dependencies]
chrono = "0.4.19"
