[package]
name = "blip-front-wasm"
version = "1.0.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
blip-domain = {path="../blip-domain"}
web-sys = {version = "0.3.57", features = ["console"]}
